--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,33 @@ h6,
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+.container {
+  position: relative;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Karartma rengini burada ayarlayabilirsiniz */
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: #ffffff; /* Yazı rengini burada ayarlayabilirsiniz */
+  text-align: center;
+  width:100%
+}
+
